--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,25 @@
 language: node_js
 node_js:
-- "4"  # nodejs的版本
+- '4'
 branches:
   only:
-  - master  # 设置自动化部署的分支
+  - master
 before_install:
-- export TZ='Asia/Shanghai'  # 设置时区
-- npm install -g hexo
-- npm install -g hexo-cli
 - openssl aes-256-cbc -K $encrypted_6d23366d7126_key -iv $encrypted_6d23366d7126_iv
   -in .travis/id_rsa.enc -out ~/.ssh/id_rsa -d
-# 设置id_rsa文件权限
+- export TZ='Asia/Shanghai'
+- npm install -g hexo
+- npm install -g hexo-cli
 - chmod 600 ~/.ssh/id_rsa
-# 添加ssh密钥
 - eval $(ssh-agent)
 - ssh-add ~/.ssh/id_rsa
-# 添加ssh配置文件
 - cp .travis/ssh_config ~/.ssh/config
-# 设置github账户信息
-- git config --global user.name "LABELNET" #设置github用户名
-- git config --global user.email "yuan@ubuntu" #设置github用户邮箱
-# 安装依赖组件
+- git config --global user.name "LABELNET"
+- git config --global user.email "yuan@ubuntu"
 install:
 - npm install
-# 执行的命令
 script:
-- hexo clean && hexo g -d
+- hexo clean
+- hexo g
+after_success:
+- hexo d
