--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,31 @@
 language: node_js
+
+sudo:false
+
 node_js:
-- '4'
+  - '4'
+
 branches:
   only:
   - master
+
+cache:
+  directories:
+  - node_modules
+
 before_install:
 - openssl aes-256-cbc -K $encrypted_6d23366d7126_key -iv $encrypted_6d23366d7126_iv
   -in .travis/id_rsa.enc -out ~/.ssh/id_rsa -d
-- export TZ='Asia/Shanghai'
-- npm install -g hexo
-- npm install -g hexo-cli
 - chmod 600 ~/.ssh/id_rsa
 - eval $(ssh-agent)
 - ssh-add ~/.ssh/id_rsa
 - cp .travis/ssh_config ~/.ssh/config
 - git config --global user.name "LABELNET"
 - git config --global user.email "1406046087@qq.com"
+
 install:
+- npm install hexo-cli -g
 - npm install
+
 script:
-- hexo clean
-- hexo g
-after_success:
-- hexo d
+- npm run deploy 
