--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,12 @@ before_install:
 
 install:
 - npm install hexo-cli -g
+- npm install hexo-deployer-git --save
 - npm install
 
 script:
-- npm run deploy 
+- hexo clean
+- hexo generate
+
+after_success:
+- hexo deploy
